--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 header {
-  background: #6F4E37;
-  color: white;
+  background: #d2dde7;
+  color: rgb(5, 5, 5);
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -18,7 +18,7 @@ header {
 }
 
 nav a {
-  color: white;
+  color: black;
   text-decoration: none;
   margin-left: 1.5rem;
   font-weight: 500;
